# laika-notepad

./: .gitignore
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  FindModel.cpp  FindModel.h  LineNumberArea.cpp  LineNumberArea.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TextEdit.cpp  TextEdit.h  TextStats.h  Theme.h  laika-notepad_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/settings/: SettingsStore.cpp  SettingsStore.h  Sputnik.h  Theme.cpp  Theme.h
src/shared/: PreferencesStore.h
